--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: crystal
 os:
 - linux
+dist: xenial
+
+before_install:
+  - sudo apt-get install -y libzstd-dev
 
 script:
   - crystal spec
