Travis git zstd build.
Co-authored-by: BlackHabanero <51138542+BlackHabanero@users.noreply.github.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,13 @@ os:
 - linux
 dist: xenial
 
-before_install:
-  - sudo apt-get install -y libzstd-dev
+cache:
+  directories:
+    - "$HOME/zstd2"
+
+before_script:
+  - ./build/travis_clone.sh
+  - export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/local/lib
 
 script:
   - crystal spec
