--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,11 @@ dist: xenial
 
 cache:
   directories:
-    - "$HOME/zstd2"
+    - "$HOME/zstd"
 
-before_script:
+install:
   - ./build/travis_clone.sh
+before_script:
   - export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/local/lib
 
 script:
