--- a/shard.yml
+++ b/shard.yml
@@ -3,7 +3,7 @@ name: zstd
 version: 1.1.0
 authors:
 - Didactic Drunk <1479616+didactic-drunk@users.noreply.github.com>
-crystal: 0.29.0-dev
+crystal: "*"
 development_dependencies:
   libgen:
     github: olbat/libgen
