--- a/shard.yml
+++ b/shard.yml
@@ -1,6 +1,6 @@
 ---
 name: zstd
-version: 1.1.0
+version: 1.1.1
 authors:
 - Didactic Drunk <1479616+didactic-drunk@users.noreply.github.com>
 crystal: "*"
@@ -9,4 +9,4 @@ development_dependencies:
     github: olbat/libgen
 license: MIT
 scripts:
-  postinstall: ./build/zstd_install.sh
+  postinstall: "./build/zstd_install.sh"
